// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IonIcon match snapshot for alias icon 1`] = `
<div>
  <ion-icon
    src="/images/ionicons/analytics.svg"
  />
</div>
`;

exports[`IonIcon match snapshot for basic icon 1`] = `
<div>
  <ion-icon
    src="/images/ionicons/home.svg"
  />
</div>
`;

exports[`IonIcon match snapshot for custom icon 1`] = `
<div>
  <ion-icon
    src="/images/ionicons/custom/home2.svg"
  />
</div>
`;
